--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
 <html>
     <head>
         <script async src='/:3000/browser-sync/browser-sync-client.js?v=2.26.3'></script>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <form></form>
+        <ul class="queue">
+            <li class="track">
+                <a class="button play"></a>
+                <img class="cover" src="https://source.unsplash.com/50x50/?music"/>
+                <p class="title">title</p>
+                <p class="artist">artist</p>
+                <p class="time">time</p>
+            </li><li class="track">
+                <a class="button play"></a>
+                <img class="cover" src="https://source.unsplash.com/50x50/?music" />
+                <p class="title">title</p>
+                <p class="artist">artist</p>
+                <p class="time">time</p>
+            </li>
+        </ul>
     </body>
 </html>
