--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
     <head>
-        <script async src='/:3000/browser-sync/browser-sync-client.js?v=2.26.3'></script>
+        <script  type='module' src='js/app.js'></script>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <form class="search" action="/">
+            <input type="search" placeholder="search" name="q"/>
+        </form>
         <ul class="queue">
             <li class="track">
                 <a class="button play"></a>
