--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     </head>
     <body>
         <form class="search" action="/">
-            <input type="search" placeholder="search" name="q"/>
+            <input type="search" placeholder="search" name="q" autocomplete="off" onkeyup="autoSearch()" />
+            <ol class="datalist"></ol>
         </form>
         <ul class="queue">
             <li class="track">
